--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" href="/favicon.ico"/>
+    <link rel="icon" href="https://gitlab.com/KINGWDY/photobed/-/raw/main/%E4%BB%A3%E7%A0%81.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>YuIndex - 极客范儿的浏览器主页</title>
+    <title>YuIndex-PLUS</title>
     <script>
         var _hmt = _hmt || [];
         (function () {
